--- a/main.css
+++ b/main.css
@@ -3,7 +3,8 @@ body {
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
     color: hsl(192, 100%, 9%);
-    font-weight: 400
+    font-weight: 400;
+    box-sizing: border-box;
 }
 p {
     font-size: 16px;
@@ -20,18 +21,20 @@ h1,h2 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
 }
+h1 {
+    font-size: 36px
+}
 .grid-parent {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 4fr 90px;
+    grid-template-rows: 1fr 4fr 50px;
     grid-template-areas: 
     "nav nav"
-    "quote main"
+    "quote mockup"
     ". .";
-    background: url("images/bg-hero-desktop.svg");
+    background: url("images/bg-hero-desktop.svg") no-repeat;
     background-size: 100%;
-    background-color: hsl(193, 100%, 96%);
-    
+    background-color: hsla(171, 93%, 89%, 0.575)
 }
 nav {
     grid-area: nav;
@@ -39,6 +42,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0px 100px;
+    /* width: fit-content */
 }
 nav img {
     width: 70%
@@ -52,12 +56,12 @@ nav button {
     border: none;
     font-weight: 700
 }
-blockquote {
+.quote {
     grid-area: quote;
     align-self: center;
-    margin-left: 90px;
+    padding: 90px;
 }
-button {
+.quote button{
     background: hsl(322, 100%, 66%);
     padding: 18px 70px;
     border-radius: 50px;
@@ -66,28 +70,34 @@ button {
     color: white
 }
 .mockup {
-    grid-area: main;
+    grid-area: mockup;
+    background: url(images/illustration-mockups.svg) no-repeat;
+    background-size: 100%;
+    width: 90%;
 }
 
 .main-content {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
-    padding:20px;
-    justify-content: center
+    padding:30px;
+    place-content: center;
+    /* margin-top: 90px; */
+    grid-gap: 50px
 }
-
-.main-section {
-    margin:70px 80px 0px 80px;
+.content {
+    /* margin:70px 80px 0px 80px; */
     width:80%;
     box-shadow: 2px 2px 9px 2px rgba(0, 0, 0, 0.205);
     border: white;
     border-radius: 10px;
     padding:40px;
+    place-self: center
+}
+.main-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-content: center;
+    place-content: center
 }
 .gap {
     margin-bottom: -30px
@@ -97,26 +107,26 @@ button {
 }
 
 .sc-img-grow {
-    width: 80%;
+    width: 100%;
     justify-self: center;
     background: url("./images/illustration-grow-together.svg");
-    background-size:100%;
+    background-size:contain;
     background-repeat:no-repeat;
 }
 
 .sc-img-flow {
-    width: 80%;
+    width: 100%;
     justify-self: center;
     background: url("./images/illustration-flowing-conversation.svg");
-    background-size:100%;
+    background-size:contain;
     background-repeat:no-repeat;
 }
 
 .sc-img-users {
-    width: 80%;
+    width: 100%;
     justify-self: center;
     background: url("./images/illustration-your-users.svg");
-    background-size:100%;
+    background-size:contain;
     background-repeat:no-repeat;
 }
 
@@ -185,3 +195,72 @@ footer {
     color:white;
     
   }
+  @media screen and (max-width:414px) {
+    .grid-parent {
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 1fr 300px;
+    grid-template-areas: 
+    "nav"
+    "quote"
+    "mockup";
+    }
+    nav {
+        margin: 0 5px;
+        /* width: 90% */
+    }
+    nav img {
+        width: 130px
+    }
+    nav button {
+        width:90px;
+        height:25px;
+        font-size:13px;
+        font-weight:bold;
+        padding: 5px;
+    }
+    .quote {
+        padding: 50px;
+        text-align: center;
+    }
+    .mockup {
+        background-size: 100%;
+        justify-self: center
+    }
+    .quote button {
+        padding: 12px 50px
+    }
+    .main-content {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 10px;
+        place-content: center;
+    }
+    .content {
+        width: 100%;
+    }
+    .gap {
+        margin-bottom: 0px
+    }
+    .main-section {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: auto;
+        grid-template-areas: 
+        "sc-img"
+        "sc-text";
+        padding: 15px;
+        width: 100%;
+        /* align-items: center */
+    }
+    .sc-text {
+        grid-area: sc-text;
+        padding: 10px;
+        text-align: center
+    }
+    .sc-img {
+        grid-area: sc-img;
+        background-size:contain;
+        height: 250px;      
+    }
+}
