--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ p {
     color: white;
     line-height: 1.5
 }
-h1,h2 {
+h1,h2,button {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
 }
